@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017-2022 - The MegaMek Team. All Rights Reserved.
+ * Copyright (c) 2017-2024 - The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MekHQ.
  *
@@ -18,62 +18,74 @@
  */
 package mekhq.gui;
 
+import megamek.client.bot.princess.BehaviorSettings;
+import megamek.client.generator.ReconfigurationParameters;
+import megamek.client.generator.TeamLoadOutGenerator;
 import megamek.client.ui.baseComponents.MMComboBox;
 import megamek.common.Entity;
 import megamek.common.EntityListFile;
+import megamek.common.Game;
 import megamek.common.annotations.Nullable;
+import megamek.common.containers.MunitionTree;
 import megamek.common.event.Subscribe;
 import megamek.common.options.OptionsConstants;
 import megamek.common.util.sorter.NaturalOrderComparator;
+import megamek.logging.MMLogger;
 import megameklab.util.UnitPrintManager;
 import mekhq.MekHQ;
-import mekhq.campaign.ResolveScenarioTracker;
+import mekhq.campaign.autoresolve.AutoResolveMethod;
 import mekhq.campaign.event.*;
-import mekhq.campaign.force.Lance;
+import mekhq.campaign.finances.Money;
+import mekhq.campaign.finances.enums.TransactionType;
+import mekhq.campaign.force.CombatTeam;
 import mekhq.campaign.mission.*;
 import mekhq.campaign.mission.atb.AtBScenarioFactory;
 import mekhq.campaign.mission.enums.MissionStatus;
+import mekhq.campaign.mission.enums.ScenarioStatus;
 import mekhq.campaign.personnel.Person;
 import mekhq.campaign.personnel.SkillType;
+import mekhq.campaign.personnel.autoAwards.AutoAwardsController;
 import mekhq.campaign.personnel.enums.PersonnelRole;
+import mekhq.campaign.personnel.enums.PersonnelStatus;
+import mekhq.campaign.stratcon.StratconScenario;
 import mekhq.campaign.unit.Unit;
+import mekhq.campaign.universe.Faction;
+import mekhq.campaign.universe.Factions;
 import mekhq.gui.adapter.ScenarioTableMouseAdapter;
 import mekhq.gui.dialog.*;
 import mekhq.gui.enums.MHQTabType;
 import mekhq.gui.model.ScenarioTableModel;
 import mekhq.gui.sorter.DateStringComparator;
+import mekhq.gui.utilities.JScrollPaneWithSpeed;
 import mekhq.gui.view.AtBScenarioViewPanel;
 import mekhq.gui.view.LanceAssignmentView;
 import mekhq.gui.view.MissionViewPanel;
 import mekhq.gui.view.ScenarioViewPanel;
-import org.apache.logging.log4j.LogManager;
+import mekhq.utilities.MHQInternationalization;
 
 import javax.swing.*;
 import javax.swing.table.TableColumn;
 import javax.swing.table.TableRowSorter;
 import java.awt.*;
 import java.io.File;
+import java.time.LocalDate;
 import java.util.List;
 import java.util.*;
 import java.util.stream.Collectors;
+
+import static megamek.client.ratgenerator.ForceDescriptor.RATING_5;
 
 /**
  * Displays Mission/Contract and Scenario details.
  */
 public final class BriefingTab extends CampaignGuiTab {
-    private JPanel panMission;
-    private JPanel panScenario;
     private LanceAssignmentView panLanceAssignment;
     private JSplitPane splitScenario;
-    private JSplitPane splitBrief;
     private JTable scenarioTable;
     private MMComboBox<Mission> comboMission;
     private JScrollPane scrollMissionView;
     private JScrollPane scrollScenarioView;
-    private JPanel panMissionButtons;
-    private JPanel panScenarioButtons;
     private JButton btnAddScenario;
-    private JButton btnAddMission;
     private JButton btnEditMission;
     private JButton btnCompleteMission;
     private JButton btnDeleteMission;
@@ -85,19 +97,21 @@ public final class BriefingTab extends CampaignGuiTab {
     private JButton btnGetMul;
     private JButton btnClearAssignedUnits;
     private JButton btnResolveScenario;
+    private JButton btnAutoResolveScenario;
 
     private ScenarioTableModel scenarioModel;
-    private TableRowSorter<ScenarioTableModel> scenarioSorter;
 
     public int selectedScenario;
 
-    //region Constructors
+    private static final MMLogger logger = MMLogger.create(BriefingTab.class);
+
+    // region Constructors
     public BriefingTab(CampaignGUI gui, String tabName) {
         super(gui, tabName);
         selectedScenario = -1;
         MekHQ.registerHandler(this);
     }
-    //endregion Constructors
+    // endregion Constructors
 
     @Override
     public MHQTabType tabType() {
@@ -113,11 +127,10 @@ public final class BriefingTab extends CampaignGuiTab {
     public void initTab() {
         final ResourceBundle resourceMap = ResourceBundle.getBundle("mekhq.resources.CampaignGUI",
                 MekHQ.getMHQOptions().getLocale());
-        GridBagConstraints gridBagConstraints;
 
-        panMission = new JPanel(new GridBagLayout());
+        JPanel panMission = new JPanel(new GridBagLayout());
 
-        gridBagConstraints = new GridBagConstraints();
+        GridBagConstraints gridBagConstraints = new GridBagConstraints();
         gridBagConstraints.gridx = 0;
         gridBagConstraints.gridy = 0;
         gridBagConstraints.fill = GridBagConstraints.NONE;
@@ -137,7 +150,7 @@ public final class BriefingTab extends CampaignGuiTab {
         gridBagConstraints.weighty = 0.0;
         panMission.add(comboMission, gridBagConstraints);
 
-        panMissionButtons = new JPanel(new GridLayout(2, 3));
+        JPanel panMissionButtons = new JPanel(new GridLayout(2, 3));
         gridBagConstraints = new GridBagConstraints();
         gridBagConstraints.gridx = 1;
         gridBagConstraints.gridy = 0;
@@ -147,7 +160,7 @@ public final class BriefingTab extends CampaignGuiTab {
         gridBagConstraints.weighty = 0.0;
         panMission.add(panMissionButtons, gridBagConstraints);
 
-        btnAddMission = new JButton(resourceMap.getString("btnAddMission.text"));
+        JButton btnAddMission = new JButton(resourceMap.getString("btnAddMission.text"));
         btnAddMission.setToolTipText(resourceMap.getString("btnAddMission.toolTipText"));
         btnAddMission.addActionListener(ev -> addMission());
         panMissionButtons.add(btnAddMission);
@@ -179,7 +192,7 @@ public final class BriefingTab extends CampaignGuiTab {
         btnGMGenerateScenarios.addActionListener(ev -> gmGenerateScenarios());
         panMissionButtons.add(btnGMGenerateScenarios);
 
-        scrollMissionView = new JScrollPane();
+        scrollMissionView = new JScrollPaneWithSpeed();
         scrollMissionView.setHorizontalScrollBarPolicy(ScrollPaneConstants.HORIZONTAL_SCROLLBAR_NEVER);
         scrollMissionView.setViewportView(null);
         gridBagConstraints = new GridBagConstraints();
@@ -195,7 +208,7 @@ public final class BriefingTab extends CampaignGuiTab {
         scenarioTable = new JTable(scenarioModel);
         scenarioTable.setSelectionMode(ListSelectionModel.SINGLE_SELECTION);
         scenarioTable.setAutoResizeMode(JTable.AUTO_RESIZE_ALL_COLUMNS);
-        scenarioSorter = new TableRowSorter<>(scenarioModel);
+        TableRowSorter<ScenarioTableModel> scenarioSorter = new TableRowSorter<>(scenarioModel);
         scenarioSorter.setComparator(ScenarioTableModel.COL_NAME, new NaturalOrderComparator());
         scenarioSorter.setComparator(ScenarioTableModel.COL_DATE, new DateStringComparator());
         scenarioTable.setRowSorter(scenarioSorter);
@@ -209,9 +222,9 @@ public final class BriefingTab extends CampaignGuiTab {
         scenarioTable.setIntercellSpacing(new Dimension(0, 0));
         scenarioTable.getSelectionModel().addListSelectionListener(ev -> refreshScenarioView());
 
-        panScenario = new JPanel(new GridBagLayout());
+        JPanel panScenario = new JPanel(new GridBagLayout());
 
-        panScenarioButtons = new JPanel(new GridLayout(3, 3));
+        JPanel panScenarioButtons = new JPanel(new GridLayout(3, 3));
         gridBagConstraints = new GridBagConstraints();
         gridBagConstraints.gridx = 0;
         gridBagConstraints.gridy = 0;
@@ -258,13 +271,19 @@ public final class BriefingTab extends CampaignGuiTab {
         btnResolveScenario.setEnabled(false);
         panScenarioButtons.add(btnResolveScenario);
 
+        btnAutoResolveScenario = new JButton(resourceMap.getString("btnAutoResolveScenario.text"));
+        btnAutoResolveScenario.setToolTipText(resourceMap.getString("btnAutoResolveScenario.toolTipText"));
+        btnAutoResolveScenario.addActionListener(ev -> autoResolveScenario());
+        btnAutoResolveScenario.setEnabled(false);
+        panScenarioButtons.add(btnAutoResolveScenario);
+
         btnClearAssignedUnits = new JButton(resourceMap.getString("btnClearAssignedUnits.text"));
         btnClearAssignedUnits.setToolTipText(resourceMap.getString("btnClearAssignedUnits.toolTipText"));
         btnClearAssignedUnits.addActionListener(ev -> clearAssignedUnits());
         btnClearAssignedUnits.setEnabled(false);
         panScenarioButtons.add(btnClearAssignedUnits);
 
-        scrollScenarioView = new JScrollPane();
+        scrollScenarioView = new JScrollPaneWithSpeed();
         scrollScenarioView.setViewportView(null);
         gridBagConstraints = new GridBagConstraints();
         gridBagConstraints.gridx = 0;
@@ -277,7 +296,7 @@ public final class BriefingTab extends CampaignGuiTab {
 
         /* ATB */
         panLanceAssignment = new LanceAssignmentView(getCampaign());
-        JScrollPane paneLanceDeployment = new JScrollPane(panLanceAssignment);
+        JScrollPane paneLanceDeployment = new JScrollPaneWithSpeed(panLanceAssignment);
         paneLanceDeployment.setMinimumSize(new Dimension(200, 300));
         paneLanceDeployment.setPreferredSize(new Dimension(200, 300));
         paneLanceDeployment.setVisible(getCampaign().getCampaignOptions().isUseAtB());
@@ -286,7 +305,7 @@ public final class BriefingTab extends CampaignGuiTab {
         splitScenario.setOneTouchExpandable(true);
         splitScenario.setResizeWeight(1.0);
 
-        splitBrief = new JSplitPane(JSplitPane.HORIZONTAL_SPLIT, panMission, splitScenario);
+        JSplitPane splitBrief = new JSplitPane(JSplitPane.HORIZONTAL_SPLIT, panMission, splitScenario);
         splitBrief.setOneTouchExpandable(true);
         splitBrief.setResizeWeight(0.5);
         splitBrief.addPropertyChangeListener(JSplitPane.DIVIDER_LOCATION_PROPERTY, ev -> refreshScenarioView());
@@ -303,12 +322,11 @@ public final class BriefingTab extends CampaignGuiTab {
                     ? new NewAtBContractDialog(getFrame(), true, getCampaign())
                     : new NewContractDialog(getFrame(), true, getCampaign());
             ncd.setVisible(true);
-            this.setVisible(false);
             comboMission.setSelectedItem(ncd.getContract());
-        } else {
+        }
+         if (mtd.isMission()) {
             CustomizeMissionDialog cmd = new CustomizeMissionDialog(getFrame(), true, null, getCampaign());
             cmd.setVisible(true);
-            this.setVisible(false);
             comboMission.setSelectedItem(cmd.getMission());
         }
     }
@@ -333,7 +351,11 @@ public final class BriefingTab extends CampaignGuiTab {
     }
 
     private void completeMission() {
+        ResourceBundle resources = ResourceBundle.getBundle("mekhq.resources.GUI",
+                MekHQ.getMHQOptions().getLocale());
+
         final Mission mission = comboMission.getSelectedItem();
+
         if (mission == null) {
             return;
         } else if (mission.hasPendingScenarios()) {
@@ -356,58 +378,264 @@ public final class BriefingTab extends CampaignGuiTab {
             if (((AtBContract) mission).contractExtended(getCampaign())) {
                 return;
             }
+        }
 
-            if (getCampaign().getCampaignOptions().getRandomRetirementMethod().isAgainstTheBot()
-                    && getCampaign().getCampaignOptions().isUseContractCompletionRandomRetirement()) {
-                RetirementDefectionDialog rdd = new RetirementDefectionDialog(getCampaignGui(),
-                        (AtBContract) mission, true);
-                rdd.setVisible(true);
-                if (rdd.wasAborted()) {
-                    /*
-                     * Once the retirement rolls have been made, the outstanding payouts can be resolved
-                     * without reference to the contract and the dialog can be accessed through the menu
-                     * provided they aren't still assigned to the mission in question.
-                     */
-                    if (!getCampaign().getRetirementDefectionTracker().isOutstanding(mission.getId())) {
-                        return;
-                    }
+        getCampaign().completeMission(mission, status);
+        MekHQ.triggerEvent(new MissionCompletedEvent(mission));
+
+        // apply mission xp
+        int xpAward = getMissionXpAward(cmd.getStatus(), mission);
+
+        if (xpAward > 0) {
+            LocalDate today = getCampaign().getLocalDate();
+            for (Person person : getCampaign().getActivePersonnel()) {
+                if (person.isChild(today)) {
+                    continue;
+                }
+
+                if (person.isDependent()) {
+                    continue;
+                }
+
+                person.awardXP(getCampaign(), xpAward);
+            }
+        }
+
+        // resolve friendly PoW ransoming
+        // this needs to be before turnover and autoAwards so friendly PoWs can be
+        // factored into those events
+        if (getCampaign().getCampaignOptions().isUseAtBPrisonerRansom()) {
+            List<Person> alliedPoWs = getCampaign().getFriendlyPrisoners();
+
+            if (!alliedPoWs.isEmpty()) {
+                Money total = alliedPoWs.stream()
+                        .map(person -> person.getRansomValue(getCampaign()))
+                        .reduce(Money.zero(), Money::plus);
+
+                String message;
+                int dialogOption;
+
+                if (getCampaign().getFunds().isLessThan(total)) {
+                    message = String.format(resources.getString("unableToRansom.format"), alliedPoWs.size(),
+                            total.toAmountAndSymbolString());
+                    dialogOption = JOptionPane.OK_CANCEL_OPTION;
                 } else {
-                    if ((getCampaign().getRetirementDefectionTracker().getRetirees(mission) != null)
-                            && getCampaign().getFinances().getBalance().isGreaterOrEqualThan(rdd.totalPayout())) {
-                        for (PersonnelRole role : PersonnelRole.getAdministratorRoles()) {
-                            Person admin = getCampaign().findBestInRole(role, SkillType.S_ADMIN);
-                            if (admin != null) {
-                                admin.awardXP(getCampaign(), 1);
-                                getCampaign().addReport(admin.getHyperlinkedName() + " has gained 1 XP.");
-                            }
-                        }
+                    message = String.format(resources.getString("ransomFriendlyQ.format"), alliedPoWs.size(),
+                            total.toAmountAndSymbolString());
+                    dialogOption = JOptionPane.YES_NO_CANCEL_OPTION;
+                }
+
+                int optionSelected = JOptionPane.showConfirmDialog(
+                        null,
+                        message,
+                        resources.getString("ransom.text"),
+                        dialogOption);
+
+                if (optionSelected != JOptionPane.OK_OPTION && getCampaign().getFunds().isLessThan(total)) {
+                    return;
+                }
+
+                switch (optionSelected) {
+                    case JOptionPane.YES_OPTION -> {
+                        getCampaign().addReport(String.format(resources.getString("ransomReport.format"),
+                                alliedPoWs.size(), total.toAmountAndSymbolString()));
+                        getCampaign().removeFunds(TransactionType.RANSOM, total, resources.getString("ransom.text"));
+                        alliedPoWs.forEach(ally -> ally.changeStatus(getCampaign(), getCampaign().getLocalDate(),
+                                PersonnelStatus.ACTIVE));
                     }
 
-                    if (!getCampaign().applyRetirement(rdd.totalPayout(), rdd.getUnitAssignments())) {
+                    case JOptionPane.NO_OPTION, JOptionPane.CANCEL_OPTION -> {
+                    }
+
+                    default -> {
                         return;
                     }
                 }
             }
         }
 
-        getCampaign().completeMission(mission, status);
-        MekHQ.triggerEvent(new MissionCompletedEvent(mission));
+        // resolve turnover
+        if ((getCampaign().getCampaignOptions().isUseRandomRetirement())
+                && (getCampaign().getCampaignOptions().isUseContractCompletionRandomRetirement())) {
+            RetirementDefectionDialog rdd = new RetirementDefectionDialog(getCampaignGui(), mission, true);
+
+            if (rdd.wasAborted()) {
+                /*
+                 * Once the retirement rolls have been made, the outstanding payouts can be
+                 * resolved
+                 * without a reference to the contract and the dialog can be accessed through
+                 * the menu
+                 * provided they aren't still assigned to the mission in question.
+                 */
+                if (!getCampaign().getRetirementDefectionTracker().isOutstanding(mission.getId())) {
+                    return;
+                }
+            } else {
+                if ((getCampaign().getRetirementDefectionTracker().getRetirees(mission) != null)
+                        && getCampaign().getFinances().getBalance().isGreaterOrEqualThan(rdd.totalPayout())) {
+                    for (PersonnelRole role : PersonnelRole.getAdministratorRoles()) {
+                        Person admin = getCampaign().findBestInRole(role, SkillType.S_ADMIN);
+                        if (admin != null) {
+                            admin.awardXP(getCampaign(), 1);
+                            getCampaign().addReport(admin.getHyperlinkedName() + " has gained 1 XP.");
+                        }
+                    }
+                }
+
+                if (!getCampaign().applyRetirement(rdd.totalPayout(), rdd.getUnitAssignments())) {
+                    return;
+                }
+            }
+        }
 
         if (getCampaign().getCampaignOptions().isUseAtB() && (mission instanceof AtBContract)) {
-            ((AtBContract) mission).checkForFollowup(getCampaign());
+            getCampaign().getContractMarket().checkForFollowup(getCampaign(), (AtBContract) mission);
+        }
+
+        // prompt autoAwards ceremony
+        if (getCampaign().getCampaignOptions().isEnableAutoAwards()) {
+            AutoAwardsController autoAwardsController = new AutoAwardsController();
+
+            // for the purposes of Mission Accomplished awards, we do not count partial
+            // Successes as Success
+            autoAwardsController.PostMissionController(getCampaign(), mission,
+                    Objects.equals(String.valueOf(cmd.getStatus()), "Success"));
+        }
+
+        // prompt enemy prisoner ransom and freeing
+        // this should always be placed after autoAwards, so that prisoners are not
+        // factored into autoAwards
+        if (getCampaign().getCampaignOptions().isUseAtBPrisonerRansom()) {
+            List<Person> defectors = new ArrayList<>();
+            List<Person> prisoners = new ArrayList<>();
+
+            for (Person prisoner : getCampaign().getActivePersonnel()) {
+                if (prisoner.getPrisonerStatus().isPrisoner()) {
+                    prisoners.add(prisoner);
+                } else if (prisoner.getPrisonerStatus().isPrisonerDefector()) {
+                    defectors.add(prisoner);
+                }
+            }
+
+            if (!defectors.isEmpty()) {
+                // will return true if the prompt is canceled
+                if (prisonerPrompt(defectors, "ransomDefectorsQ.format", resources)) {
+                    return;
+                }
+            }
+
+            if (!prisoners.isEmpty()) {
+                if (prisonerPrompt(prisoners, "ransomQ.format", resources)) {
+                    return;
+                }
+            }
+        }
+
+        // we have to rebuild the list, so we can factor in any prisoners that have been
+        // ransomed.
+        List<Person> prisoners = getCampaign().getActivePersonnel().stream()
+                .filter(prisoner -> prisoner.getPrisonerStatus().isPrisoner())
+                .toList();
+
+        if (!prisoners.isEmpty()) {
+            String title = (prisoners.size() == 1) ? prisoners.get(0).getFullTitle()
+                    : String.format(resources.getString("numPrisoners.text"), prisoners.size());
+            int option = JOptionPane.showConfirmDialog(null,
+                    String.format(resources.getString("confirmFree.format"), title),
+                    resources.getString("freeQ.text"),
+                    JOptionPane.YES_NO_CANCEL_OPTION);
+
+            switch (option) {
+                case JOptionPane.YES_OPTION -> {
+                    for (Person prisoner : prisoners) {
+                        getCampaign().removePerson(prisoner);
+                    }
+                }
+                case JOptionPane.NO_OPTION -> {
+                }
+                default -> {
+                    return;
+                }
+            }
         }
 
         final List<Mission> missions = getCampaign().getSortedMissions();
         comboMission.setSelectedItem(missions.isEmpty() ? null : missions.get(0));
     }
 
+    /**
+     * Displays a prompt asking the user if they want to ransom their prisoners or
+     * defectors.
+     *
+     * @param prisoners    The list of prisoners to be ransomed.
+     * @param resourceName The name of the resource bundle key for the prompt
+     *                     message.
+     * @param resources    The resource bundle containing the string resources.
+     * @return true if the user selects the "Cancel" option, false otherwise.
+     */
+    private boolean prisonerPrompt(List<Person> prisoners, String resourceName, ResourceBundle resources) {
+        Money total = Money.zero();
+        total = total.plus(prisoners.stream()
+                .map(person -> person.getRansomValue(getCampaign()))
+                .collect(Collectors.toList()));
+
+        int optionSelected = JOptionPane.showConfirmDialog(
+                null,
+                String.format(resources.getString(resourceName),
+                        prisoners.size(),
+                        total.toAmountAndSymbolString()),
+                resources.getString("ransom.text"),
+                JOptionPane.YES_NO_CANCEL_OPTION);
+
+        switch (optionSelected) {
+            case JOptionPane.YES_OPTION -> {
+                getCampaign().addReport(String.format(resources.getString("ransomReport.format"),
+                        prisoners.size(),
+                        total.toAmountAndSymbolString()));
+                getCampaign().addFunds(TransactionType.RANSOM,
+                        total,
+                        resources.getString("ransom.text"));
+                prisoners.forEach(prisoner -> getCampaign().removePerson(prisoner, false));
+            }
+            case JOptionPane.NO_OPTION -> {
+            }
+            default -> {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    /**
+     * Calculates the XP award for completing a mission.
+     *
+     * @param missionStatus The status of the mission as a MissionStatus enum.
+     * @param mission       The Mission object representing the completed mission.
+     * @return The XP award for completing the mission.
+     */
+    private int getMissionXpAward(MissionStatus missionStatus, Mission mission) {
+        return switch (missionStatus) {
+            case FAILED, BREACH -> getCampaign().getCampaignOptions().getMissionXpFail();
+            case SUCCESS, PARTIAL -> {
+                if ((getCampaign().getCampaignOptions().isUseStratCon())
+                        && (mission instanceof AtBContract)
+                        && (((AtBContract) mission).getStratconCampaignState().getVictoryPoints() >= 3)) {
+                    yield getCampaign().getCampaignOptions().getMissionXpOutstandingSuccess();
+                } else {
+                    yield getCampaign().getCampaignOptions().getMissionXpSuccess();
+                }
+            }
+            case ACTIVE -> 0;
+        };
+    }
+
     private void deleteMission() {
         final Mission mission = comboMission.getSelectedItem();
         if (mission == null) {
-            LogManager.getLogger().error("Cannot remove null mission");
+            logger.error("Cannot remove null mission");
             return;
         }
-        LogManager.getLogger().debug("Attempting to Delete Mission, Mission ID: " + mission.getId());
+        logger.debug("Attempting to Delete Mission, Mission ID: {}", mission.getId());
         if (0 != JOptionPane.showConfirmDialog(null, "Are you sure you want to delete this mission?", "Delete mission?",
                 JOptionPane.YES_NO_OPTION)) {
             return;
@@ -426,7 +654,8 @@ public final class BriefingTab extends CampaignGuiTab {
             return;
         }
 
-        if (0 != JOptionPane.showConfirmDialog(null, "Are you sure you want to generate a new set of scenarios?", "Generate scenarios?",
+        if (0 != JOptionPane.showConfirmDialog(null, "Are you sure you want to generate a new set of scenarios?",
+                "Generate scenarios?",
                 JOptionPane.YES_NO_OPTION)) {
             return;
         }
@@ -442,54 +671,36 @@ public final class BriefingTab extends CampaignGuiTab {
 
         CustomizeScenarioDialog csd = new CustomizeScenarioDialog(getFrame(), true, null, mission, getCampaign());
         csd.setVisible(true);
-        //need to update the scenario table and refresh the scroll view
+        // need to update the scenario table and refresh the scroll view
         refreshScenarioTableData();
         scrollMissionView.revalidate();
         scrollMissionView.repaint();
     }
 
     private void clearAssignedUnits() {
-        if (0 == JOptionPane.showConfirmDialog(null, "Do you really want to remove all units from this scenario?",
+        if (0 == JOptionPane.showConfirmDialog(null,
+            "Do you really want to remove all units from this scenario?",
                 "Clear Units?", JOptionPane.YES_NO_OPTION)) {
             int row = scenarioTable.getSelectedRow();
             Scenario scenario = scenarioModel.getScenario(scenarioTable.convertRowIndexToModel(row));
-            if (null == scenario) {
+
+            if (scenario == null) {
                 return;
             }
+
+            // This handles StratCon undeployment
+            if (scenario instanceof AtBScenario) {
+                StratconScenario stratConScenario = ((AtBScenario) scenario).getStratconScenario(getCampaign());
+
+                if (stratConScenario != null) {
+                    stratConScenario.resetScenario(getCampaign());
+                    return;
+                }
+            }
+
+            // This handles Legacy AtB undeployment
             scenario.clearAllForcesAndPersonnel(getCampaign());
         }
-    }
-
-    private void resolveScenario() {
-        int row = scenarioTable.getSelectedRow();
-        Scenario scenario = scenarioModel.getScenario(scenarioTable.convertRowIndexToModel(row));
-        if (null == scenario) {
-            return;
-        }
-        boolean control = JOptionPane.showConfirmDialog(getFrame(),
-                "Did your side control the battlefield at the end of the scenario?", "Control of Battlefield?",
-                JOptionPane.YES_NO_OPTION, JOptionPane.QUESTION_MESSAGE) == JOptionPane.YES_OPTION;
-        ResolveScenarioTracker tracker = new ResolveScenarioTracker(scenario, getCampaign(), control);
-        ChooseMulFilesDialog chooseFilesDialog = new ChooseMulFilesDialog(getFrame(), true, tracker);
-        chooseFilesDialog.setVisible(true);
-        if (chooseFilesDialog.wasCancelled()) {
-            return;
-        }
-        // tracker.postProcessEntities(control);
-        ResolveScenarioWizardDialog resolveDialog = new ResolveScenarioWizardDialog(getFrame(), true, tracker);
-        resolveDialog.setVisible(true);
-        if (getCampaign().getCampaignOptions().isUseAtB()
-                && getCampaign().getMission(scenario.getMissionId()) instanceof AtBContract
-                && !getCampaign().getRetirementDefectionTracker().getRetirees().isEmpty()) {
-            RetirementDefectionDialog rdd = new RetirementDefectionDialog(getCampaignGui(),
-                    (AtBContract) getCampaign().getMission(scenario.getMissionId()), false);
-            rdd.setVisible(true);
-            if (!rdd.wasAborted()) {
-                getCampaign().applyRetirement(rdd.totalPayout(), rdd.getUnitAssignments());
-            }
-        }
-
-        MekHQ.triggerEvent(new ScenarioResolvedEvent(scenario));
     }
 
     private void printRecordSheets() {
@@ -505,12 +716,13 @@ public final class BriefingTab extends CampaignGuiTab {
         // First, we need to get all units assigned to the current scenario
         final List<UUID> unitIds = scenario.getForces(getCampaign()).getAllUnits(true);
 
-        // Then, we need to convert the ids to units, and filter out any units that are null and
+        // Then, we need to convert the ids to units, and filter out any units that are
+        // null and
         // any units with null entities
         final List<Unit> units = unitIds.stream()
                 .map(unitId -> getCampaign().getUnit(unitId))
                 .filter(unit -> (unit != null) && (unit.getEntity() != null))
-                .collect(Collectors.toList());
+                .toList();
 
         final List<Entity> chosen = new ArrayList<>();
         final StringBuilder undeployed = new StringBuilder();
@@ -524,7 +736,7 @@ public final class BriefingTab extends CampaignGuiTab {
             }
         }
 
-        if (undeployed.length() > 0) {
+        if (!undeployed.isEmpty()) {
             final Object[] options = { "Continue", "Cancel" };
             if (JOptionPane.showOptionDialog(getFrame(),
                     "The following units could not be deployed:" + undeployed,
@@ -542,7 +754,7 @@ public final class BriefingTab extends CampaignGuiTab {
         // add bot forces
         chosen.addAll(scenario.getBotForces().stream()
                 .flatMap(botForce -> botForce.getFullEntityList(getCampaign()).stream())
-                .collect(Collectors.toList()));
+                .toList());
 
         if (!chosen.isEmpty()) {
             UnitPrintManager.printAllUnits(chosen, true);
@@ -561,6 +773,106 @@ public final class BriefingTab extends CampaignGuiTab {
     }
 
     private void startScenario() {
+        startScenario(null);
+    }
+
+
+    /**
+     * Resolve the selected scenario by proving a MUL file
+     */
+    private void resolveScenario() {
+        Scenario scenario = getSelectedScenario();
+        if (null == scenario) {
+            return;
+        }
+        getCampaign().getApp().resolveScenario(scenario);
+    }
+
+    /**
+     * Auto-resolve the selected scenario.
+     * Can run both the auto resolve using princess or using the ACS engine
+     */
+    private void autoResolveScenario() {
+        Scenario scenario = getSelectedScenario();
+        if (null == scenario) {
+            return;
+        }
+        promptAutoResolve(scenario);
+    }
+
+    private void runAbstractCombatAutoResolve(Scenario scenario) {
+        List<Unit> chosen = playerUnits(scenario, new StringBuilder());
+        if (chosen.isEmpty()) {
+            return;
+        }
+        getCampaign().getApp().startAutoResolve((AtBScenario) scenario, chosen);
+    }
+
+    private void runPrincessAutoResolve() {
+        startScenario(getCampaign().getAutoResolveBehaviorSettings());
+    }
+
+    private void promptAutoResolve(Scenario scenario) {
+        // the options for the auto resolve method follow a predefined order, which is the same as the order in the enum
+        // and it uses that to preselect the option that is currently set in the campaign options
+        Object[] options = new Object[]{
+            MHQInternationalization.getText("AutoResolveMethod.PRINCESS.text"),
+            MHQInternationalization.getText("AutoResolveMethod.ABSTRACT_COMBAT.text"),
+        };
+
+        var preSelectedOptionIndex = getCampaignOptions().getAutoResolveMethod().ordinal();
+
+        var selectedOption = JOptionPane.showOptionDialog(getFrame(),
+            MHQInternationalization.getText("AutoResolveMethod.promptForAutoResolveMethod.text"),
+            MHQInternationalization.getText("AutoResolveMethod.promptForAutoResolveMethod.title"),
+            JOptionPane.YES_NO_OPTION,
+            JOptionPane.QUESTION_MESSAGE, null, options, options[preSelectedOptionIndex]);
+
+        if (selectedOption == JOptionPane.CLOSED_OPTION) {
+            return;
+        }
+
+        var autoResolveMethod = AutoResolveMethod.values()[selectedOption];
+
+        if (autoResolveMethod == AutoResolveMethod.PRINCESS) {
+            runPrincessAutoResolve();
+        } else if (autoResolveMethod == AutoResolveMethod.ABSTRACT_COMBAT) {
+            runAbstractCombatAutoResolve(scenario);
+        }
+    }
+
+
+    private List<Unit> playerUnits(Scenario scenario, StringBuilder undeployed) {
+        Vector<UUID> uids = scenario.getForces(getCampaign()).getAllUnits(true);
+        if (uids.isEmpty()) {
+            return Collections.emptyList();
+        }
+        List<Unit> chosen = new ArrayList<>();
+        for (UUID uid : uids) {
+            Unit u = getCampaign().getUnit(uid);
+
+            if ((null != u) && (null != u.getEntity())) {
+                if (null == u.checkDeployment()) {
+                    // Make sure the unit's entity and pilot are fully up to date!
+                    u.resetPilotAndEntity();
+                    chosen.add(u);
+                } else {
+                    undeployed.append('\n').append(u.getName()).append(" (").append(u.checkDeployment()).append(')');
+                }
+            }
+        }
+        return chosen;
+    }
+
+    private Scenario getSelectedScenario() {
+        int row = scenarioTable.getSelectedRow();
+        if (row < 0) {
+            return null;
+        }
+        return scenarioModel.getScenario(scenarioTable.convertRowIndexToModel(row));
+    }
+
+    private void startScenario(BehaviorSettings autoResolveBehaviorSettings) {
         int row = scenarioTable.getSelectedRow();
         if (row < 0) {
             return;
@@ -588,7 +900,7 @@ public final class BriefingTab extends CampaignGuiTab {
                     chosen.add(u);
 
                 } else {
-                    undeployed.append("\n").append(u.getName()).append(" (").append(u.checkDeployment()).append(")");
+                    undeployed.append('\n').append(u.getName()).append(" (").append(u.checkDeployment()).append(')');
                 }
             }
         }
@@ -599,7 +911,7 @@ public final class BriefingTab extends CampaignGuiTab {
             AtBDynamicScenarioFactory.setPlayerDeploymentZones((AtBDynamicScenario) scenario, getCampaign());
         }
 
-        if (undeployed.length() > 0) {
+        if (!undeployed.isEmpty()) {
             Object[] options = { "Continue", "Cancel" };
             int n = JOptionPane.showOptionDialog(getFrame(),
                     "The following units could not be deployed:" + undeployed, "Could not deploy some units",
@@ -612,11 +924,12 @@ public final class BriefingTab extends CampaignGuiTab {
 
         // code to support deployment of reinforcements for legacy ATB scenarios.
         if ((scenario instanceof AtBScenario) && !(scenario instanceof AtBDynamicScenario)) {
-            Lance assignedLance = ((AtBScenario) scenario).getLance(getCampaign());
-            if (assignedLance != null) {
-                int assignedForceId = assignedLance.getForceId();
+
+            CombatTeam combatTeam = ((AtBScenario) scenario).getCombatTeamById(getCampaign());
+            if (combatTeam != null) {
+                int assignedForceId = combatTeam.getForceId();
                 int cmdrStrategy = 0;
-                Person commander = getCampaign().getPerson(Lance.findCommander(assignedForceId, getCampaign()));
+                Person commander = getCampaign().getPerson(CombatTeam.findCommander(assignedForceId, getCampaign()));
                 if ((null != commander) && (null != commander.getSkill(SkillType.S_STRATEGY))) {
                     cmdrStrategy = commander.getSkill(SkillType.S_STRATEGY).getLevel();
                 }
@@ -634,13 +947,124 @@ public final class BriefingTab extends CampaignGuiTab {
 
         if (getCampaign().getCampaignOptions().isUseAtB() && (scenario instanceof AtBScenario)) {
             ((AtBScenario) scenario).refresh(getCampaign());
+
+            // Autoconfigure munitions for all non-player forces once more, using finalized
+            // forces
+            if (getCampaign().getCampaignOptions().isAutoConfigMunitions()) {
+                autoconfigureBotMunitions(((AtBScenario) scenario), chosen);
+            }
         }
 
         if (!chosen.isEmpty()) {
             // Ensure that the MegaMek year GameOption matches the campaign year
-            getCampaign().getGameOptions().getOption(OptionsConstants.ALLOWED_YEAR).setValue(getCampaign().getGameYear());
-            getCampaignGui().getApplication().startHost(scenario, false, chosen);
+            getCampaign().getGameOptions().getOption(OptionsConstants.ALLOWED_YEAR)
+                    .setValue(getCampaign().getGameYear());
+            getCampaignGui().getApplication()
+                .startHost(scenario, false, chosen, autoResolveBehaviorSettings);
+
         }
+    }
+
+    /**
+     * Designed to fully kit out all non-player-controlled forces prior to battle.
+     * Does not do any checks for supplies, only for availability to each faction
+     * during the current timeframe.
+     *
+     * @param scenario
+     * @param chosen
+     */
+    private void autoconfigureBotMunitions(AtBScenario scenario, List<Unit> chosen) {
+        Game cGame = getCampaign().getGame();
+        boolean groundMap = scenario.getBoardType() == AtBScenario.T_GROUND;
+        boolean spaceMap = scenario.getBoardType() == AtBScenario.T_SPACE;
+        ArrayList<Entity> alliedEntities = new ArrayList<>();
+
+        ArrayList<String> allyFactionCodes = new ArrayList<>();
+        ArrayList<String> opforFactionCodes = new ArrayList<>();
+        String opforFactionCode = "IS";
+        String allyFaction = "IS";
+        int opforQuality = RATING_5;
+        HashMap<Integer, ArrayList<Entity>> botTeamMappings = new HashMap<>();
+        int allowedYear = cGame.getOptions().intOption(OptionsConstants.ALLOWED_YEAR);
+
+        // This had better be an AtB contract...
+        final Mission mission = comboMission.getSelectedItem();
+        if (mission instanceof AtBContract atbc) {
+            opforFactionCode = (atbc.getEnemyCode().isBlank()) ? opforFactionCode : atbc.getEnemyCode();
+            opforQuality = atbc.getEnemyQuality();
+            allyFactionCodes.add(atbc.getEmployerCode());
+            allyFaction = atbc.getEmployerName(allowedYear);
+        } else {
+            allyFactionCodes.add(allyFaction);
+        }
+        Faction opforFaction = Factions.getInstance().getFaction(opforFactionCode);
+        opforFactionCodes.add(opforFactionCode);
+        boolean isPirate = opforFaction.isRebelOrPirate();
+
+        // Collect player units to use as configuration fodder
+        ArrayList<Entity> playerEntities = new ArrayList<>();
+        for (final Unit unit : chosen) {
+            playerEntities.add(unit.getEntity());
+        }
+        allyFactionCodes.add(getCampaign().getFaction().getShortName());
+
+        // Split up bot forces into teams for separate handling
+        for (final BotForce botForce : scenario.getBotForces()) {
+            if (botForce.getName().contains(allyFaction)) {
+                // Stuff with our employer's name should be with us.
+                playerEntities.addAll(botForce.getFixedEntityList());
+                alliedEntities.addAll(botForce.getFixedEntityList());
+            } else {
+                int botTeam = botForce.getTeam();
+                if (!botTeamMappings.containsKey(botTeam)) {
+                    botTeamMappings.put(botTeam, new ArrayList<>());
+                }
+                botTeamMappings.get(botTeam).addAll(botForce.getFixedEntityList());
+            }
+        }
+
+        // Configure generated units with appropriate munitions (for BV calcs)
+        TeamLoadOutGenerator tlg = new TeamLoadOutGenerator(cGame);
+
+        // Reconfigure each group separately so they only consider their own
+        // capabilities
+        for (ArrayList<Entity> entityList : botTeamMappings.values()) {
+            // bin fill ratio will be adjusted by the loadout generator based on piracy and
+            // quality
+            ReconfigurationParameters rp = TeamLoadOutGenerator.generateParameters(
+                    cGame,
+                    cGame.getOptions(),
+                    entityList,
+                    opforFactionCode,
+                    playerEntities,
+                    allyFactionCodes,
+                    opforQuality,
+                    ((isPirate) ? TeamLoadOutGenerator.UNSET_FILL_RATIO : 1.0f));
+            rp.isPirate = isPirate;
+            rp.groundMap = groundMap;
+            rp.spaceEnvironment = spaceMap;
+            MunitionTree mt = TeamLoadOutGenerator.generateMunitionTree(rp, entityList, "");
+            tlg.reconfigureEntities(entityList, opforFactionCode, mt, rp);
+        }
+
+        // Finally, reconfigure all allies (but not player entities) as one organization
+        ArrayList<Entity> allEnemyEntities = new ArrayList<>();
+        botTeamMappings.values().stream().forEach(x -> allEnemyEntities.addAll(x));
+        ReconfigurationParameters rp = TeamLoadOutGenerator.generateParameters(
+                cGame,
+                cGame.getOptions(),
+                alliedEntities,
+                allyFactionCodes.get(0),
+                allEnemyEntities,
+                opforFactionCodes,
+                opforQuality,
+                (getCampaign().getFaction().isPirate()) ? TeamLoadOutGenerator.UNSET_FILL_RATIO : 1.0f);
+        rp.isPirate = getCampaign().getFaction().isPirate();
+        rp.groundMap = groundMap;
+        rp.spaceEnvironment = spaceMap;
+        MunitionTree mt = TeamLoadOutGenerator.generateMunitionTree(rp, alliedEntities, "");
+        tlg.reconfigureEntities(alliedEntities, allyFactionCodes.get(0), mt, rp);
+
     }
 
     private void joinScenario() {
@@ -671,12 +1095,12 @@ public final class BriefingTab extends CampaignGuiTab {
                     chosen.add(u);
 
                 } else {
-                    undeployed.append("\n").append(u.getName()).append(" (").append(u.checkDeployment()).append(")");
+                    undeployed.append('\n').append(u.getName()).append(" (").append(u.checkDeployment()).append(')');
                 }
             }
         }
 
-        if (undeployed.length() > 0) {
+        if (!undeployed.isEmpty()) {
             Object[] options = { "Continue", "Cancel" };
             int n = JOptionPane.showOptionDialog(getFrame(),
                     "The following units could not be deployed:" + undeployed, "Could not deploy some units",
@@ -704,12 +1128,13 @@ public final class BriefingTab extends CampaignGuiTab {
         // First, we need to get all units assigned to the current scenario
         final List<UUID> unitIds = scenario.getForces(getCampaign()).getAllUnits(true);
 
-        // Then, we need to convert the ids to units, and filter out any units that are null and
+        // Then, we need to convert the ids to units, and filter out any units that are
+        // null and
         // any units with null entities
         final List<Unit> units = unitIds.stream()
                 .map(unitId -> getCampaign().getUnit(unitId))
                 .filter(unit -> (unit != null) && (unit.getEntity() != null))
-                .collect(Collectors.toList());
+                .toList();
 
         final ArrayList<Entity> chosen = new ArrayList<>();
         final StringBuilder undeployed = new StringBuilder();
@@ -723,7 +1148,7 @@ public final class BriefingTab extends CampaignGuiTab {
             }
         }
 
-        if (undeployed.length() > 0) {
+        if (!undeployed.isEmpty()) {
             final Object[] options = { "Continue", "Cancel" };
             if (JOptionPane.showOptionDialog(getFrame(),
                     "The following units could not be deployed:" + undeployed,
@@ -742,7 +1167,7 @@ public final class BriefingTab extends CampaignGuiTab {
             // Save the player's entities to the file.
             EntityListFile.saveTo(file, chosen);
         } catch (Exception ex) {
-            LogManager.getLogger().error("", ex);
+            logger.error("", ex);
         }
 
         final Mission mission = comboMission.getSelectedItem();
@@ -752,12 +1177,15 @@ public final class BriefingTab extends CampaignGuiTab {
             chosen.clear();
             chosen.addAll(((AtBScenario) scenario).getAlliesPlayer());
             file = determineMULFilePath(scenario, ((AtBContract) mission).getEmployer());
+
+            int genericBattleValue = calculateGenericBattleValue(chosen);
+
             if (file != null) {
                 try {
                     // Save the player's allied entities to the file.
-                    EntityListFile.saveTo(file, chosen);
+                    EntityListFile.saveTo(file, chosen, genericBattleValue);
                 } catch (Exception ex) {
-                    LogManager.getLogger().error("", ex);
+                    logger.error("", ex);
                 }
             }
         }
@@ -770,15 +1198,36 @@ public final class BriefingTab extends CampaignGuiTab {
                 continue;
             }
             file = determineMULFilePath(scenario, botForce.getName());
+
+            int genericBattleValue = calculateGenericBattleValue(chosen);
+
             if (file != null) {
                 try {
                     // Save the bot force's entities to the file.
-                    EntityListFile.saveTo(file, chosen);
+                    EntityListFile.saveTo(file, chosen, genericBattleValue);
                 } catch (Exception ex) {
-                    LogManager.getLogger().error("", ex);
+                    logger.error("", ex);
                 }
             }
         }
+    }
+
+    /**
+     * Calculates the total generic battle value of the entities chosen.
+     * If the use of generic battle value option is enabled in the campaign options, the generic battle
+     * value of each entity in the list is summed up and returned as the total generic battle value.
+     * If the said option is disabled, the method returns 0.
+     *
+     * @param chosen the list of entities for which the generic battle value is to be calculated.
+     * @return the total generic battle value or 0 if the generic battle value usage is turned off in
+     * campaign options.
+     */
+    private int calculateGenericBattleValue(ArrayList<Entity> chosen) {
+        int genericBattleValue = 0;
+        if (getCampaign().getCampaignOptions().isUseGenericBattleValue()) {
+            genericBattleValue = chosen.stream().mapToInt(Entity::getGenericBattleValue).sum();
+        }
+        return genericBattleValue;
     }
 
     private @Nullable File determineMULFilePath(final Scenario scenario, final String name) {
@@ -827,6 +1276,7 @@ public final class BriefingTab extends CampaignGuiTab {
             btnGetMul.setEnabled(false);
             btnClearAssignedUnits.setEnabled(false);
             btnResolveScenario.setEnabled(false);
+            btnAutoResolveScenario.setEnabled(false);
             btnPrintRS.setEnabled(false);
             selectedScenario = -1;
             return;
@@ -847,14 +1297,27 @@ public final class BriefingTab extends CampaignGuiTab {
         // later
         SwingUtilities.invokeLater(() -> scrollScenarioView.getVerticalScrollBar().setValue(0));
 
-        final boolean canStartGame = scenario.canStartScenario(getCampaign());
+        final boolean canStartGame = (
+            (!getCampaign().checkLinkedScenario(scenario.getId())) && (scenario.canStartScenario(getCampaign()))
+            );
+
         btnStartGame.setEnabled(canStartGame);
         btnJoinGame.setEnabled(canStartGame);
         btnLoadGame.setEnabled(canStartGame);
         btnGetMul.setEnabled(canStartGame);
-        btnClearAssignedUnits.setEnabled(canStartGame);
+
+        final boolean hasTrack = scenario.getHasTrack();
+        if (hasTrack) {
+            btnClearAssignedUnits.setEnabled(canStartGame && getCampaign().isGM());
+        } else {
+            btnClearAssignedUnits.setEnabled(canStartGame);
+        }
+
         btnResolveScenario.setEnabled(canStartGame);
-        btnPrintRS.setEnabled(canStartGame);
+        if (scenario instanceof AtBScenario) {
+            btnAutoResolveScenario.setEnabled(canStartGame);
+        }
+        btnPrintRS.setEnabled(canStartGame);   
     }
 
     public void refreshLanceAssignments() {
@@ -903,10 +1366,10 @@ public final class BriefingTab extends CampaignGuiTab {
         scenarioTable.setFillsViewportHeight(true);
     }
 
-    private ActionScheduler scenarioDataScheduler = new ActionScheduler(this::refreshScenarioTableData);
-    private ActionScheduler scenarioViewScheduler = new ActionScheduler(this::refreshScenarioView);
-    private ActionScheduler missionsScheduler = new ActionScheduler(this::refreshMissions);
-    private ActionScheduler lanceAssignmentScheduler = new ActionScheduler(this::refreshLanceAssignments);
+    private final ActionScheduler scenarioDataScheduler = new ActionScheduler(this::refreshScenarioTableData);
+    private final ActionScheduler scenarioViewScheduler = new ActionScheduler(this::refreshScenarioView);
+    private final ActionScheduler missionsScheduler = new ActionScheduler(this::refreshMissions);
+    private final ActionScheduler lanceAssignmentScheduler = new ActionScheduler(this::refreshLanceAssignments);
 
     @Subscribe
     public void handle(OptionsChangedEvent ev) {
@@ -918,8 +1381,7 @@ public final class BriefingTab extends CampaignGuiTab {
     public void handle(ScenarioChangedEvent evt) {
         final Mission mission = comboMission.getSelectedItem();
         if ((evt.getScenario() != null)
-                && (((mission == null) && (evt.getScenario().getMissionId() == -1))
-                || (mission != null) && (evt.getScenario().getMissionId() == mission.getId()))) {
+                && (evt.getScenario().getMissionId() == (mission == null ? -1 : mission.getId()))) {
             scenarioTable.repaint();
             if (evt.getScenario().getId() == selectedScenario) {
                 scenarioViewScheduler.schedule();
